# qt_cpp_toolchain

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
.github/workflows/: build_cmake.yml
cmake/: Conan.cmake  MacroOutOfSourceBuild.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt  main.cpp
src/Calc/: Calc.cpp  Calc.h
src/GUI/: HelloQt.cpp
test/: CMakeLists.txt  tests.cpp
